<resources>
    <string name="app_name">homeWork-views</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="movie_pg">13+</string>
    <string name="movieName">Avengers:<br/>End Game</string>
    <string name="movieTagline">Action, Adventure, Fantasy</string>
    <string name="reviewCounter">125 Reviews</string>
    <string name="storyLineText">After the devastating events of Avengers: Infinity War, the universe is in ruins. With the help of remaining allies, the Avengers assemble once more in order to reverse Thanos\' actions and restore balance to the universe.</string>
    <string name="actor1SlotName">Robert Downey Jr.</string>
    <string name="actor2SlotName">Robert Jr.</string>
    <string name="actor3SlotName">Robert Robert Robert</string>
    <string name="actor4SlotName">Robert Robert Robert Robert</string>

</resources>